--- a/NewsTicker/NewsTicker.csproj
+++ b/NewsTicker/NewsTicker.csproj
@@ -48,8 +48,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CIAPI.Phone7">
+      <HintPath>packages\CIAPI.CS.1.0.139.0\lib\WinPhone7\CIAPI.Phone7.dll</HintPath>
+    </Reference>
+    <Reference Include="CityIndex.JsonClient.Phone7">
+      <HintPath>packages\CIAPI.CS.1.0.139.0\lib\WinPhone7\CityIndex.JsonClient.Phone7.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging.Phone7">
+      <HintPath>packages\CIAPI.CS.1.0.139.0\lib\WinPhone7\Common.Logging.Phone7.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Interop" />
+    <Reference Include="Newtonsoft.Json.Silverlight">
+      <HintPath>packages\CIAPI.CS.1.0.139.0\lib\Silverlight40\Newtonsoft.Json.Silverlight.dll</HintPath>
+    </Reference>
+    <Reference Include="Phone7.Lightstream">
+      <HintPath>packages\CIAPI.CS.1.0.139.0\lib\WinPhone7\Phone7.Lightstream.dll</HintPath>
+    </Reference>
+    <Reference Include="StreamingClient.Phone7">
+      <HintPath>packages\CIAPI.CS.1.0.139.0\lib\WinPhone7\StreamingClient.Phone7.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
@@ -60,22 +78,46 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DetailsPage.xaml.cs">
+      <DependentUpon>DetailsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Example.FetchNews.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubscribeNewsPage.xaml.cs">
+      <DependentUpon>SubscribeNewsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\ItemViewModel.cs" />
+    <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="DetailsPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SampleData\MainViewModelSampleData.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SubscribeNewsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
     <None Include="Properties\WMAppManifest.xml" />
   </ItemGroup>
@@ -86,6 +128,7 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Images\appbar.favs.addto.rest.png" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
